--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@doabit/semantic-ui-sass": "^2.4.5",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
+    "@rails/actioncable": "^7.0.4-3",
     "esbuild": "^0.17.18",
     "jquery": "^3.6.4"
   },
